Add clear display function

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         
         <section class="buttons">
             <div class="container">
-                <button>C</button>
+                <button id="clear">C</button>
                 <button>&#177</button>
                 <button>%</button>
-                <button>&#247</button>
+                <button class="operations" id="/">&#247</button>
                 <button class="numbers" id="7">7</button>
                 <button class="numbers" id="8">8</button>
                 <button class="numbers" id="9">9</button>
-                <button>&#215</button>
+                <button class="operations" id="*">&#215</button>
                 <button class="numbers" id="4">4</button>
                 <button class="numbers" id="5">5</button>
                 <button class="numbers" id="6">6</button>
-                <button>-</button>
+                <button class="operations" id="-">-</button>
                 <button class="numbers" id="1">1</button>
                 <button class="numbers" id="2">2</button>
                 <button class="numbers" id="3">3</button>
-                <button>+</button>
+                <button class="operations" id="+">+</button>
                 <button class="numbers" id="0">0</button>
                 <button>,</button>
                 <button>del</button>
