--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="numbers" id="3">3</button>
                 <button class="operations" id="add">+</button>
                 <button class="numbers" id="0">0</button>
-                <button>,</button>
+                <button id="decimal">.</button>
                 <button>del</button>
                 <button id="equal">=</button>
             </div>
