Add delete button functionality

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button class="operations" id="add">+</button>
                 <button class="numbers" id="0">0</button>
                 <button id="decimal">.</button>
-                <button>del</button>
+                <button id="delete">del</button>
                 <button id="equal">=</button>
             </div>
         </section>
