--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         
         <section class="buttons">
             <div class="container">
-                <button id="clear">C</button>
-                <button>&#177</button>
-                <button>%</button>
+                <button class="misc" id="clear">C</button>
+                <button class="misc" id="sign">+/-</button>
+                <button class="misc" id="percentage">%</button>
                 <button class="operations" id="divide">&#247</button>
                 <button class="numbers" id="7">7</button>
                 <button class="numbers" id="8">8</button>
@@ -33,9 +33,9 @@
                 <button class="numbers" id="3">3</button>
                 <button class="operations" id="add">+</button>
                 <button class="numbers" id="0">0</button>
-                <button id="decimal">.</button>
-                <button id="delete">del</button>
-                <button id="equal">=</button>
+                <button class="misc" id="decimal">.</button>
+                <button class="misc" id="delete">&#9003</button>
+                <button class="misc" id="equal">=</button>
             </div>
         </section>
     </div>    
