Improve calculator layout

--- a/index.html
+++ b/index.html
@@ -16,26 +16,29 @@
         
         <section class="buttons">
             <div class="container">
-                <button class="misc" id="clear">C</button>
-                <button class="misc" id="sign">+/-</button>
-                <button class="misc" id="percentage">%</button>
-                <button class="operations" id="divide">&#247</button>
-                <button class="numbers" id="7">7</button>
-                <button class="numbers" id="8">8</button>
-                <button class="numbers" id="9">9</button>
-                <button class="operations" id="multiply">&#215</button>
-                <button class="numbers" id="4">4</button>
-                <button class="numbers" id="5">5</button>
-                <button class="numbers" id="6">6</button>
-                <button class="operations" id="subtract">-</button>
-                <button class="numbers" id="1">1</button>
-                <button class="numbers" id="2">2</button>
-                <button class="numbers" id="3">3</button>
-                <button class="operations" id="add">+</button>
-                <button class="numbers" id="0">0</button>
-                <button class="misc" id="decimal">.</button>
-                <button class="misc" id="delete">&#9003</button>
-                <button class="misc" id="equal">=</button>
+                <div class="toprow">
+                    <button class="cleardelete" id="clear">AC</button>
+                    <button class="cleardelete" id="delete">&#9003</button>
+                    <button class="operations" id="divide">&#247</button>
+                </div>
+                <div class="lowerrows">
+                    <button class="numbers" id="7">7</button>
+                    <button class="numbers" id="8">8</button>
+                    <button class="numbers" id="9">9</button>
+                    <button class="operations" id="multiply">&#215</button>
+                    <button class="numbers" id="4">4</button>
+                    <button class="numbers" id="5">5</button>
+                    <button class="numbers" id="6">6</button>
+                    <button class="operations" id="subtract">-</button>
+                    <button class="numbers" id="1">1</button>
+                    <button class="numbers" id="2">2</button>
+                    <button class="numbers" id="3">3</button>
+                    <button class="operations" id="add">+</button>
+                    <button class="numbers" id="0">0</button>
+                    <button class="misc" id="decimal">.</button>
+                    <button class="misc" id="equal">=</button>
+                    
+                </div>    
             </div>
         </section>
     </div>    
